add more for java profiling